# CityBuildingGame

./: README.md  building.py  button.py  effects.py  game.py  game2.py  game_loop.py  game_manager.py  game_settings.py  geometry.py  main_menu.py  map.py  menu_loop.py  pyproject.toml  ui.py
interface/: button.py  button_builder.py  button_factory.py  in_game_ui.py  info_box.py  ingame_settings_menu_ui.py  main_menu.py  main_menu_ui.py  settings_menu.py  settings_menu_ui.py
loops/: game_loop.py  ingame_menu_loop.py  main_menu_loop.py
managers/: asset_manager.py  game_manager.py  road_manager.py
rendering/: effects.py
ui/: button_factory.py  in_game_ui.py
