[tool.poetry]
name = "chatgpt-game"
version = "0.1.0"
description = ""
authors = ["CryptoRalph <doxter@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
